--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.3.3"
+rand = "0.8.5"
 serde = {version = "1.0.216", features = ["derive"]}
 serde_json = "1.0.134"
