--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "boggle"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+debug = true
+
 [dependencies]
 bincode = "1.3.3"
 clap = { version = "4.5.23", features = ["derive"] }
