--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ debug = true
 bincode = "1.3.3"
 clap = { version = "4.5.23", features = ["derive"] }
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 serde = {version = "1.0.216", features = ["derive"]}
 serde_json = "1.0.134"
