--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ bincode = "1.3.3"
 clap = { version = "4.5.23", features = ["derive"] }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+rayon = "1.10.0"
 serde = {version = "1.0.216", features = ["derive"]}
 serde_json = "1.0.134"
